# ProcessParty

./: .gitignore  CMakeLists.txt  README.md  doxygen.cfg
docs/html/: annotated.html  classValidator-members.html  classValidator.html  classes.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  files.html  functions.html  functions_func.html  index.html  validator_8cpp.html  validator_8h.html  validator_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_2.js  searchdata.js
examples/: example_system.cpp  launch_validator.cpp
examples/interprocess/: example_anonymous_shared_memory.cpp
examples/process/: example_anonymous_shared_memory.cpp  example_file_mapping.cpp  example_shared_memory.cpp  example_system.cpp
lib/include/: validator.h
process_party/: common.h  interprocess.h  process.cpp  process.h
process_party/interprocess/: anonymous_shared_memory.cpp  anonymous_shared_memory.h  file_mapping.cpp  file_mapping.h  mapped_region.cpp  mapped_region.h  memory_mappable.cpp  memory_mappable.h  pipe_stream.cpp  pipe_stream.h  shared_memory.cpp  shared_memory.h
process_party/process/: child.cpp  child.h  environment.cpp  environment.h  redirection_manager.cpp  redirection_manager.h  search_path.cpp  search_path.h  spawn.cpp  spawn.h  system.cpp  system.h
tests/: test_validator.cpp
tests/interprocess/: test_anonymous_mapping.cpp  test_file_mapping.cpp  test_mapped_region.cpp  test_shared_memory.cpp
tests/process/: test_child.cpp  test_environment.cpp  test_redirect.cpp  test_spawn.cpp  test_system.cpp
validator/: test_validator.cpp  validator.cpp
